# krsbi_ros2

./: .gitignore
krsbi_bringup/: CMakeLists.txt  package.xml
krsbi_bringup/launch/: object_detection.launch.py  robot_auto.launch.py  robot_manual.launch.py
krsbi_interfaces/: CMakeLists.txt  package.xml
krsbi_interfaces/msg/: BallPositionBasedOnCamera.msg  BoundingBox.msg  ControlOutput.msg  DribbleModule.msg  DribbleSetting.msg  Encoder.msg  KickerModule.msg  KickerSetting.msg  NavigationSetting.msg  RealSenseT265.msg  Wheel.msg
krsbi_pkg/: package.xml  setup.cfg  setup.py
krsbi_pkg/krsbi_pkg/: KRSBI_55n.pt  auto.ui  auto_node_ui.py  auto_ui.py  constants.py  manual.ui  manual_node_ui.py  manual_ui.py  object_detection_node.py  robot_movement_auto_node.py  robot_movement_manual_node.py
